[package]
name = "graphviz"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = {version = "0.19.7", features=["lexer"]}
petgraph = {version = "0.6", optional = true}

[features]
default = [ ]
use_petgraph = [ "petgraph" ]

[build-dependencies]
lalrpop = "0.19"
